--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
 
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -38,64 +42,76 @@
         </section>
         <section class="main__sub">
           <div class="schedule">
+            <header><h1>Schedule of Mass</h1></header>
             <div class="schedule__text">
-              <h4>6:30am to 7:00am</h4>
+              <h4>5:00am to 6:00am</h4>
             </div>
             <div class="schedule__text">
-              <h4>7:30am to 8:30am</h4>
+              <h4>7:00am to 8:00am</h4>
             </div>
             <div class="schedule__text">
-              <h4>9:30am to 10:30am</h4>
+              <h4>9:00am to 10:00am</h4>
             </div>
             <div class="schedule__text">
-              <h4>1:00pm to 2:00pm</h4>
+              <h4>5:00pm to 6:00pm</h4>
+            </div>
+            <header><h1>Schedule of Mass for the dead</h1></header>
+            <div class="schedule__text">
+              <h4>5:00am to 6:00am</h4>
             </div>
             <div class="schedule__text">
-              <h4>2:30pm to 3:30pm</h4>
+              <h4>7:00am to 8:00am</h4>
             </div>
             <div class="schedule__text">
-              <h4>4:00pm to 5:00pm</h4>
+              <h4>9:00am to 10:00am</h4>
             </div>
             <div class="schedule__text">
-              <h4>6:30pm to 7:30pm</h4>
+              <h4>5:00pm to 6:00pm</h4>
+            </div>
+            <header><h1>Schedule of Thanks giving mass</h1></header>
+            <div class="schedule__text">
+              <h4>5:00am to 6:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>7:00am to 8:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>9:00am to 10:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>5:00pm to 6:00pm</h4>
+            </div>
+            <header><h1>Schedule of Wedding</h1></header>
+            <div class="schedule__text">
+              <h4>5:00am to 6:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>7:00am to 8:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>9:00am to 10:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>5:00pm to 6:00pm</h4>
+            </div>
+            <header><h1>Schedule of Baptism</h1></header>
+            <div class="schedule__text">
+              <h4>5:00am to 6:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>7:00am to 8:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>9:00am to 10:00am</h4>
+            </div>
+            <div class="schedule__text">
+              <h4>5:00pm to 6:00pm</h4>
             </div>
           </div>
-          <form action="" class="form">
-            <header>
-              <h1>Sign up</h1>
-            </header>
-
-            <label class="name" for="">Name </label>
-            <input type="text" placeholder="Enter Your Name" />
-
-            <label class="name" for="">Time </label>
-            <input type="number" placeholder="Enter your number" />
-
-            <input type="checkbox" />
-            <label for="">confirm </label>
-
-            <button>Submit</button>
-          </form>
         </section>
       </main>
 
-      <section class="scroll">
-        <div class="scroll-item">
-          <div class="item"></div>
-        </div>
-        <div class="scroll-item">
-          <div class="item"></div>
-        </div>
-        <div class="scroll-item">
-          <div class="item"></div>
-        </div>
-        <div class="scroll-item">
-          <div class="item"></div>
-        </div>
-        <div class="scroll-item">
-          <div class="item"></div>
-        </div>
-      </section>
+      <section class="scroll"></section>
 
       <section class="event">
         <header class="header">
@@ -104,72 +120,209 @@
 
         <section class="event__content">
           <div class="event__content--content">
-            <div class="img-content"></div>
+            <div class="img-content">
+              <img src="./img/event-2.png" alt="" />
+            </div>
             <div class="text-content">
-              <h1>Semana Santa</h1>
+              <h1>Easter Sunday</h1>
               <p>
-                &nbsp; &nbsp; Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Similique cupiditate distinctio rem tempore
-                eveniet officia quisquam qui? In omnis impedit earum hic eos
-                itaque non!
+                &nbsp; &nbsp;Easter Sunday is a Christian holiday during the
+                solemn event of Holy Week. The date commemorates the
+                resurrection of Jesus from death by crucifixion. Throughout Holy
+                Week, especially Easter Sunday, attention is focused on the
+                Gospel accounts of Jesus’ final days. The liturgies and
+                ceremonies held throughout the week often attract some of the
+                biggest attendance in the year. It is considered to be a day of
+                joy and celebration to honour the rising of Jesus Christ from
+                the dead.
               </p>
 
-              <span>April 20 2023</span>
+              <span
+                >(Varies each year, typically in late March or late April)</span
+              >
             </div>
           </div>
           <div class="event__content--content">
-            <div class="img-content"></div>
+            <div class="img-content">
+              <img src="./img/event-3.png" alt="" />
+            </div>
             <div class="text-content">
-              <h1>Semana Santa</h1>
+              <h1>Good Friday</h1>
               <p>
-                &nbsp; &nbsp; Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Similique cupiditate distinctio rem tempore
-                eveniet officia quisquam qui? In omnis impedit earum hic eos
-                itaque non!
+                &nbsp; &nbsp;Good Friday is a Christian holiday during the
+                sombre event of Holy Week. The date commemorates the crucifixion
+                and death of Jesus. Some places refer to the day as Great
+                Friday, Black Friday, Long Friday or Sorrowful Friday. It is a
+                sombre time of reflection and prayer. Many Christian
+                denominations hold church services around midday to acknowledge
+                the hours when Jesus hung on the cross. Some churches may
+                reenact different events of this time, such as the procession of
+                the cross.
               </p>
 
-              <span>April 20 2023</span>
+              <span>(The Friday before Easter Sunday)</span>
+            </div>
+          </div>
+          <div class="event__content--content">
+            <div class="img-content">
+              <img src="./img/event-4.png" alt="" />
+            </div>
+            <div class="text-content">
+              <h1>Ascension</h1>
+              <p>
+                &nbsp; &nbsp;Ascension is a Christian feast that marks Jesus’
+                departure from earth into heaven after his resurrection. It is
+                one of the earliest observed celebrations in Christianity.
+                Ascension also marks the end of the Easter period.
+              </p>
+
+              <span>(39 days after Easter Sunday)</span>
+            </div>
+          </div>
+          <div class="event__content--content">
+            <div class="img-content">
+              <img src="./img/event-1.png" alt="" />
+            </div>
+            <div class="text-content">
+              <h1>Pentecost</h1>
+              <p>
+                &nbsp; &nbsp;Pentecost is a Christian holiday that commemorates
+                the descent of the Holy Spirit upon the disciples of Jesus. At
+                this time, the apostles received the “gift of tongues”, the
+                ability to speak in another language. In many parts of the
+                world, Pentecost has become a common day for baptisms to occur.
+                Many churches celebrate Pentecost with a mass or worship
+                service. Pentecost is also known as Whitsunday or Whit Sunday in
+                different Christian traditions.
+              </p>
+
+              <span>(The 7th Sunday after Easter)</span>
             </div>
           </div>
         </section>
       </section>
+      <div class="contact">
+        <div class="contact__text">
+          <h1>Contact Us</h1>
+          <p>
+            We use an agile approach to test assumptions and connect with the
+          </p>
+          <p>needs of your audience early and often.</p>
+        </div>
 
-      <section class="event">
-        <header class="header">
-          <h1>Event</h1>
-        </header>
+        <div class="contact__form">
+          <form action="" class="contact__form--form">
+            <div class="name-field">
+              <div class="field">
+                <label for="">First Name</label>
+                <input type="text" placeholder="Bonnie" />
+              </div>
+              <div class="field">
+                <label for="">Last Name</label>
+                <input type="text" placeholder="Bonnie" />
+              </div>
+            </div>
+            <div class="name-field">
+              <div class="field">
+                <label for="">Your email</label>
+                <input type="email" placeholder="Name@yahoo.com" />
+              </div>
+              <div class="field">
+                <label for="">Phone Number</label>
+                <input type="number" placeholder="Bonnie" />
+              </div>
+            </div>
 
-        <section class="event__content">
-          <div class="event__content--content">
-            <div class="img-content"></div>
-            <div class="text-content">
-              <h1>Semana Santa</h1>
+            <div class="text-field">
+              <label for="">Your message</label>
+              <textarea name="" id="" cols="30" rows="10">
+leave a comment...
+              </textarea>
               <p>
-                &nbsp; &nbsp; Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Similique cupiditate distinctio rem tempore
-                eveniet officia quisquam qui? In omnis impedit earum hic eos
-                itaque non!
+                By submitting this form you agree to our
+                <span>terms and conditions</span> and our
+                <span>privacy policy</span> which explains how we may collect,
+                use and disclose your personal information including to third
+                parties.
               </p>
+            </div>
+            <button>Send message</button>
+          </form>
 
-              <span>April 20 2023</span>
+          <div class="contact__form--location">
+            <div class="location">
+              <span class="material-symbols-outlined"> call </span>
+              <h2>Call us:</h2>
+              <p>
+                Call us to speak to a member of our team. We are always happy to
+                help.
+              </p>
+            </div>
+            <div class="location">
+              <span class="material-symbols-outlined"> location_on </span>
+              <h2>Address:</h2>
+              <p>
+                SILVER LAKE, United States 1941 Late Avenue Zip Code/Postal
+                code:03875
+              </p>
+            </div>
+            <div class="location">
+              <span class="material-symbols-outlined"> check_circle </span>
+              <h2>Address:</h2>
+              <p>
+                SILVER LAKE, United States 1941 Late Avenue Zip Code/Postal
+                code:03875
+              </p>
             </div>
           </div>
-          <div class="event__content--content">
-            <div class="img-content"></div>
-            <div class="text-content">
-              <h1>Semana Santa</h1>
-              <p>
-                &nbsp; &nbsp; Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Similique cupiditate distinctio rem tempore
-                eveniet officia quisquam qui? In omnis impedit earum hic eos
-                itaque non!
-              </p>
+        </div>
+      </div>
+    </div>
 
-              <span>April 20 2023</span>
-            </div>
-          </div>
-        </section>
-      </section>
+    <div class="backdrop" id="display-none">
+      <form id="myForm" action="#" class="form">
+        <div class="close">
+          <span class="material-symbols-outlined"> close </span>
+        </div>
+
+        <div class="firstname">
+          <label for="">FIRST NAME</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Name"
+            value=""
+          />
+        </div>
+
+        <div class="firstname">
+          <label for="">Your message here</label>
+          <textarea name="message" id="textarea" cols="30" rows="10" value="">
+          </textarea>
+        </div>
+
+        <div class="firstname">
+          <label for="">Your message here</label>
+          <select name="select" id="select">
+            <option value="Mass for the dead">Mass for the dead</option>
+            <option value="Thanks giving mass">Thanks giving mass</option>
+            <option value="Wedding">Wedding</option>
+            <option value="Baptism">Baptism</option>
+          </select>
+        </div>
+
+        <div class="firstname">
+          <label for="">Your number</label>
+          <input
+            type="number"
+            name="number"
+            id="number"
+            placeholder="09********"
+          />
+        </div>
+        <button type="submit">Submit</button>
+      </form>
     </div>
   </body>
   <script defer src="app.js"></script>
